--- a/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
+++ b/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
@@ -1,11 +1,4 @@
-﻿@using MudBlazor;
-@using SharedLib;
-
-@inherits BlazorBusyComponentBaseModel
-
-@inject IParametersStorageService _storage
-@inject IToolsService _tools;
-@inject ISnackbar _snackbar;
+﻿@inherits BlazorBusyComponentBaseModel
 
 <div class="card">
     <div class="card-body">
@@ -60,79 +53,3 @@
         }
     </div>
 </div>
-<ShowMessagesComponent @ref="showMessages" />
-@code {
-    ShowMessagesComponent? showMessages;
-
-    TelegramBotConfigModel _conf = new();
-    TelegramBotConfigModel _conf_self = new();
-    bool ShowToken = false;
-    bool CanSave => _conf != _conf_self;
-
-    void ResetForm()
-    {
-        _conf = GlobalStatic.CreateDeepCopy(_conf_self);
-    }
-
-    /// <inheritdoc/>
-    protected override async Task OnInitializedAsync()
-    {
-        IsBusyProgress = true;
-        TelegramBotConfigResponseModel _bot_conf = await _storage.GetTelegramBotConfig();
-        Severity _style;
-        foreach (ResultMessage m in _bot_conf.Messages)
-        {
-            _style = m.TypeMessage switch
-            {
-                ResultTypeEnum.Success => Severity.Success,
-                ResultTypeEnum.Info => Severity.Info,
-                ResultTypeEnum.Warning => Severity.Warning,
-                ResultTypeEnum.Error => Severity.Error,
-                _ => Severity.Normal
-            };
-            _snackbar.Add(m.Text, _style, opt => opt.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-        }
-
-        _conf = _bot_conf.Conf ?? new();
-        _conf_self = GlobalStatic.CreateDeepCopy(_conf);
-        IsBusyProgress = false;
-    }
-
-    async Task TestTelegramBotConfig()
-    {
-        TelegramBotCheckResponseModel _conf_bot = await _tools.TestTelegramBotConnect(_conf);
-        showMessages?.ShowMessages(_conf_bot.Messages);
-        if (_conf_bot.Id > 0)
-        {
-            _snackbar.Add($"[{nameof(_conf_bot.Id)}:{_conf_bot.Id}]\n[{nameof(_conf_bot.FirstName)}:{_conf_bot.FirstName}]\n[{nameof(_conf_bot.LastName)}:{_conf_bot.LastName}]\n[{nameof(_conf_bot.Username)}:{_conf_bot.Username}]", Severity.Info, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-            if (_conf_bot.ServiceIsRunning is null)
-            {
-                _snackbar.Add("Служба не запущена. Запуск службы выполняется при старте приложения (если включён автостарт бота). Остановить бота можно перезапуском приложения (предварительно отключите автостарт)", Severity.Normal, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-            }
-            else
-            {
-                _snackbar.Add($"Служба запущена:\n[{nameof(_conf_bot.ServiceIsRunning.FirstName)}:{_conf_bot.ServiceIsRunning.FirstName}]\n[{nameof(_conf_bot.ServiceIsRunning.LastName)}:{_conf_bot.ServiceIsRunning.LastName}]\n[{nameof(_conf_bot.ServiceIsRunning.Username)}:{_conf_bot.ServiceIsRunning.Username}]\n[{nameof(_conf_bot.ServiceIsRunning.Id)}:{_conf_bot.ServiceIsRunning.Id}]", Severity.Success, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-            }
-        }
-        else
-        {
-            _snackbar.Add("Ошибка. Токен не прошёл проверку.", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-        }
-        StateHasChanged();
-    }
-
-    /// <inheritdoc/>
-    async Task OnValidSubmitHandle()
-    {
-        IsBusyProgress = true;
-        ResponseBaseModel rest = await _storage.SaveTelegramBotConfig(_conf);
-        showMessages?.ShowMessages(rest.Messages);
-        if (!rest.IsSuccess)
-        {
-            IsBusyProgress = false;
-            return;
-        }
-        _conf_self = GlobalStatic.CreateDeepCopy(_conf);
-        IsBusyProgress = false;
-    }
-}
