--- a/RazorLib/_Imports.razor
+++ b/RazorLib/_Imports.razor
@@ -1,3 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.Logging;
 @using Microsoft.AspNetCore.Components.Forms;
+@using MudBlazor;
+@using SharedLib;
