--- a/RazorLib/Shared/settings/TelegramUsersListComponent.razor
+++ b/RazorLib/Shared/settings/TelegramUsersListComponent.razor
@@ -1,17 +1,12 @@
-﻿@using MudBlazor;
-@using SharedLib;
-
-@inherits BlazorBusyComponentBaseModel
-
-@inject IUsersService _users;
-@inject ISnackbar Snackbar;
+﻿@inherits BlazorBusyComponentBaseModel
 
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">Пользователи</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Права доступа</h6>
         <MudTable Loading="IsBusyProgress" ServerData="@(new Func<TableState, Task<TableData<UserModelDB>>>(ServerReload))" Dense="true" Hover="true"
-                  OnCommitEditClick="SaveElement" CanCancelEdit="true" RowEditPreview="BeckupEditItem" RowEditCancel="ResetItemToOriginalValues" @ref="table">
+                  OnCommitEditClick="SaveElement" CanCancelEdit="true" RowEditPreview="BeckupEditItem" RowEditCancel="ResetItemToOriginalValues" @ref="table"
+                  RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" T="UserModelDB">
             <ToolBarContent>
                 <MudText Typo="Typo.h6">Telegram users</MudText>
                 <MudSpacer />
@@ -38,6 +33,7 @@
             <RowTemplate>
                 <MudTd>
                     @($"{(string.IsNullOrWhiteSpace(context.Name) ? "" : $"@{context.Name} - ")}{context.FirstName} {context.LastName}")
+                    <MudIconButton Icon="@Icons.Material.Filled.Delete" Size="Size.Small" aria-label="delete" Title="Удалить пользователя из БД"></MudIconButton>
                 </MudTd>
                 <MudTd>@context.Email</MudTd>
                 <MudTd>
@@ -96,19 +92,19 @@
                     <MudTextField InputType="InputType.Email" @bind-Value="@context.Email" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.AllowSystemCommands ? "Системные команды разрешены (запретить?)" : "Системные команды запрещены (разрешить?)")" @bind-Checked="@context.AllowSystemCommands" />
+                    <MudCheckBox Label="@(context.AllowSystemCommands ? "Системные команды разрешены (запретить?)" : "Системные команды запрещены (разрешить?)")" @bind-Value="@context.AllowSystemCommands" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.CommandsAllowed ? "Управление устройствами разрешены (запретить?)" : "Управление устройствами запрещены (разрешить?)")" @bind-Checked="@context.CommandsAllowed" />
+                    <MudCheckBox Label="@(context.CommandsAllowed ? "Управление устройствами разрешены (запретить?)" : "Управление устройствами запрещены (разрешить?)")" @bind-Value="@context.CommandsAllowed" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.AlarmSubscriber ? "Уведомления включены (запретить?)" : "Уведомления отключены (разрешить?)")" @bind-Checked="@context.AlarmSubscriber" />
+                    <MudCheckBox Label="@(context.AlarmSubscriber ? "Уведомления включены (запретить?)" : "Уведомления отключены (разрешить?)")" @bind-Value="@context.AlarmSubscriber" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.AllowChangeMqttConfig ? "Разрешено настраивать MQTT (запретить?)" : "Без доступа к настркам MQTT (разрешить?)")" @bind-Checked="@context.AllowChangeMqttConfig" />
+                    <MudCheckBox Label="@(context.AllowChangeMqttConfig ? "Разрешено настраивать MQTT (запретить?)" : "Без доступа к настркам MQTT (разрешить?)")" @bind-Value="@context.AllowChangeMqttConfig" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.IsDisabled ? "Пользователь заблокирован (разблокировать?)" : "Активный пользователь (заблокировать?)")" @bind-Checked="@context.IsDisabled" />
+                    <MudCheckBox Label="@(context.IsDisabled ? "Пользователь заблокирован (разблокировать?)" : "Активный пользователь (заблокировать?)")" @bind-Value="@context.IsDisabled" />
                 </MudTd>
             </RowEditingTemplate>
             <NoRecordsContent>
@@ -123,104 +119,3 @@
         </MudTable>
     </div>
 </div>
-
-@code {
-    private int totalItems;
-    private MudTable<UserModelDB>? table;
-
-    UserModelDB elementBeforeEdit = new();
-    private List<string> editEvents = new();
-
-    IEnumerable<UserModelDB> Users = Enumerable.Empty<UserModelDB>();
-
-    async Task Reload()
-    {
-        if (table is not null)
-            await table.ReloadServerData();
-    }
-
-    void SaveElement(MouseEventArgs element)
-    {
-        UserModelDB? sender = Users?.FirstOrDefault(x => x.TelegramId == elementBeforeEdit.TelegramId);
-
-        if (sender is null)
-        {
-            Snackbar.Add("sender is null. error {71B240C3-2A60-45AB-B7AF-C0A8F4CF7CAB}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-            return;
-        }
-
-        InvokeAsync(async () =>
-        {
-            IsBusyProgress = true;
-            StateHasChanged();
-            ResponseBaseModel upd_command = await _users.UpdateUser(new UpdateUserModel()
-                {
-                    TelegramId = sender.TelegramId,
-                    Email = sender.Email,
-                    IsDisabled = sender.IsDisabled,
-                    AllowSystemCommands = sender.AllowSystemCommands,
-                    AllowAlerts = sender.AlarmSubscriber,
-                    AllowHardwareControl = sender.CommandsAllowed,
-                    AllowChangeMqttConfig = sender.AllowChangeMqttConfig
-                });
-            Snackbar.ShowMessagesResponse(upd_command.Messages);
-            if (!upd_command.IsSuccess)
-            {
-                IsBusyProgress = false;
-                StateHasChanged();
-                return;
-            }
-            elementBeforeEdit = GlobalStatic.CreateDeepCopy(sender);
-            await Reload();
-            IsBusyProgress = false;
-            StateHasChanged();
-        });
-    }
-
-    void BeckupEditItem(object element)
-    {
-        UserModelDB sender = (UserModelDB)element;
-        elementBeforeEdit = GlobalStatic.CreateDeepCopy<UserModelDB>(sender);
-        AddEditionEvent($"RowEditPreview event: made a backup of Element [{sender.Name} {sender.FirstName} {sender.LastName}]");
-    }
-
-    /// <summary>
-    /// Here we simulate getting the paged, filtered and ordered data from the server
-    /// </summary>
-    private async Task<TableData<UserModelDB>> ServerReload(TableState state)
-    {
-        IsBusyProgress = true;
-        StateHasChanged();
-        UsersPaginationResponseModel rest = await _users.UsersGetList(new UserListGetModel() { PageNum = state.Page, PageSize = state.PageSize, IncludeDisabledUsers = true });
-        Snackbar.ShowMessagesResponse(rest.Messages);
-        totalItems = rest.TotalRowsCount;
-        IsBusyProgress = false;
-        Users = rest.Users ?? Enumerable.Empty<UserModelDB>();
-        StateHasChanged();
-
-        return new TableData<UserModelDB>() { TotalItems = totalItems, Items = rest.Users };
-    }
-
-    private void ResetItemToOriginalValues(object element)
-    {
-        UserModelDB sender = (UserModelDB)element;
-        sender.Email = elementBeforeEdit.Email;
-        sender.AlarmSubscriber = elementBeforeEdit.AlarmSubscriber;
-        sender.CommandsAllowed = elementBeforeEdit.CommandsAllowed;
-        sender.IsDisabled = elementBeforeEdit.IsDisabled;
-        sender.AllowSystemCommands = elementBeforeEdit.AllowSystemCommands;
-        sender.TelegramId = elementBeforeEdit.TelegramId;
-        sender.LastName = elementBeforeEdit.LastName;
-        sender.FirstName = elementBeforeEdit.FirstName;
-        sender.Name = elementBeforeEdit.Name;
-        sender.LastUpdate = elementBeforeEdit.LastUpdate;
-
-        AddEditionEvent($"RowEditCancel event: Editing of Element [{sender.Name} {sender.FirstName}] canceled");
-    }
-
-    private void AddEditionEvent(string message)
-    {
-        editEvents.Add(message);
-        StateHasChanged();
-    }
-}
