--- a/ab-log.web/Components/App.razor
+++ b/ab-log.web/Components/App.razor
@@ -15,8 +15,11 @@
 <body>
     <Routes @rendermode="new InteractiveServerRenderMode(false)" />
     <script src="_framework/blazor.web.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/ckeditor5/ckeditor.js"></script>
+    <script src="js/CKEditorInterop.js"></script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
