--- a/ab-log.web/wwwroot/app.css
+++ b/ab-log.web/wwwroot/app.css
@@ -20,7 +20,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -47,4 +47,13 @@ a, .btn-link {
 
 .blazor-error-boundary::after {
     content: "An error has occurred."
+}
+
+.ck-content > p {
+    color: black;
+}
+
+.ck-content > p > a {
+    color: blue;
+    text-decoration: underline;
 }
