--- a/ab-log-rc/Pages/ScriptsPage.razor
+++ b/ab-log-rc/Pages/ScriptsPage.razor
@@ -5,8 +5,8 @@
 @using MudBlazor;
 @using SharedLib;
 
-@* @inject IRefitScriptsService _refit; *@
-@inject ISnackbar _snackbar;
+@* @inject IRefitScriptsService _refit; 
+@inject ISnackbar _snackbar;*@
 
 @inherits BlazorBusyComponentBaseModel
 
