--- a/ab-log-rc/_Imports.razor
+++ b/ab-log-rc/_Imports.razor
@@ -11,3 +11,5 @@
 @using RazorLib.Shared.navs.tabs
 @using RazorLib.Shared;
 @using SharedLib;
+@using Microsoft.EntityFrameworkCore
+@using ab.context
